# RAG-chatbot

./: README.md  main.py  pyproject.toml
app/: config.py
app/api/: endpoints.py
app/schemas/: rag_schema.py
app/services/: ai_memory.py  chat_bot.py  embedder.py  qdrant_client.py  rag.py
